Fixed Cliente name reference in ContasReceberImpl
- Changed from nome to nomecliente, which references the variable in the class correctly.
- Added JUnit dependencies to fix unit tests
- Created filter method on Cliente resource
- Added JsonIgnore annotation on OneToMany relationship inside Cliente

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,20 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.7.1</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.7.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 		</dependency>
